<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <View
        android:layout_width="700dp"
        android:layout_height="250dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="698dp"
        android:layout_height="248dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/stop_ventilation_question"
            android:textSize="35sp"
            android:textColor="@color/alertRed"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:baselineAligned="false">

            <Button
                android:id="@+id/continue_vent_button"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="30dp"
                android:text="@string/continue_ventilation"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/stop_vent_button"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/alertRed"
                android:drawableLeft="@drawable/ic_stop_symbol"
                android:paddingLeft="15dp"
                android:text="@string/stop_ventilation"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>