<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/tvp_logo_grayback"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="5dp"/>

                <Button
                    android:id="@+id/standby_button"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="5dp"
                    android:drawableTop="@drawable/ic_hand_transparent_white"
                    android:paddingTop="20dp"
                    android:text="@string/standby"/>

                <Button
                    android:id="@+id/settings_button"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="5dp"
                    android:drawableTop="@drawable/ic_gear_transparent_white"
                    android:paddingTop="20dp"
                    android:text="@string/settings"/>

                <Button
                    android:id="@+id/alarm_limits_button"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="5dp"
                    android:drawableTop="@drawable/ic_bell_transparent_white"
                    android:paddingTop="20dp"
                    android:text="@string/alarm_limits"/>

                <Button
                    android:id="@+id/log_button"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="5dp"
                    android:drawableTop="@drawable/ic_log_transparent_white"
                    android:paddingTop="20dp"
                    android:text="@string/log"/>

                <Button
                    android:id="@+id/more_button"
                    android:layout_width="150dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/more"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/alarm_silence_button"
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:drawableTop="@drawable/ic_alarm_silence"
                        android:paddingTop="10dp"
                        android:text=""/>

                    <Button
                        android:id="@+id/alarms_bar"
                        android:layout_width="700dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/no_alarms"/>

                    <Button
                        android:id="@+id/full_oxygen_button"
                        android:layout_width="120dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="150dp"
                        android:text="100% O2"/>

                </LinearLayout>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_container_view"
                    android:layout_width="match_parent"
                    android:layout_height="600dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/bt1"
                            android:layout_width="120dp"
                            android:layout_height="100dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="2dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="PIP"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/pipTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:text="0"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="cmH20"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/peep_button"
                            android:layout_width="120dp"
                            android:layout_height="100dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="2dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="PEEP"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/peep_val_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:text="0"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="cmH20"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/bt3"
                            android:layout_width="120dp"
                            android:layout_height="100dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="2dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="R Rate"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/bt3_val_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:text="0"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="bpm"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/i_time_button"
                            android:layout_width="120dp"
                            android:layout_height="100dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="2dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="I Time"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/iTime_val_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:text="0"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="sec"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/i_pause_button"
                            android:layout_width="120dp"
                            android:layout_height="100dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="2dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="I Pause"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/iPause_val_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:text="0"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="%"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/fio2_button"
                            android:layout_width="120dp"
                            android:layout_height="100dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="2dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="FiO2"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/fio2_val_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:text="0"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="%"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <Button
                            android:id="@+id/p_trigger_button"
                            android:layout_width="120dp"
                            android:layout_height="100dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:elevation="2dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="I Time"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/pTrigger_val_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:text="0"
                                android:textColor="@color/white"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="cmH20"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>